Video autoplays. Fixed some margins/resizing

--- a/home.html
+++ b/home.html
@@ -10,32 +10,37 @@
     <header>
         <a href="#"><img class="logo" src="img/fake-logo.png"></a>
         <table class="menu">
-                <tr>
-                        <td><a href="#">HOME</a></td>
-                        <td><a href="#">VISION</a></td>
-                        <td><a href="#">MAP</a></td>
-                        <td><a href="#">ABOUT US</a></td>
-                </tr>
+            <tr>
+                <td><a href="#">HOME</a></td>
+                <td><a href="#">VISION</a></td>
+                <td><a href="#">MAP</a></td>
+                <td><a href="#">ABOUT US</a></td>
+            </tr>
         </table>
     </header>
 
     <!-- Main -->
     <main>
-        <iframe width=100% height=750px src="https://www.youtube.com/embed/oSmUI3m2kLk"></iframe>
-        <h1 class="frontpage">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</h1>
+        <iframe width=100% height=750px src="https://www.youtube.com/embed/oSmUI3m2kLk?autoplay=1"></iframe>
+        <!-- <h1 class="frontpage">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</h1> -->
+        <img class="frontpage" src="img/lorem_ipsum.png">
         <a href="#"><img class="map" src="img/USAgraphic.png"></a>
     </main>
 
     <!-- Footer -->
     <footer>
         <table class="icon">
-                <tr>
-                        <td><a href="#"><img src="img/facebook.png"></a></td>
-                        <td><a href="#"><img src="img/instagram.png"></a></td>
-                        <td><a href="#"><img src="img/twitter.png"></a></td>
-                </tr>
+            <tr>
+                <td><a href="#"><img src="img/facebook.png"></a></td>
+                <td><a href="#"><img src="img/instagram.png"></a></td>
+                <td><a href="#"><img src="img/twitter.png"></a></td>
+            </tr>
         </table>
         <p class="footertext">Contact</p>
     </footer>
 </body>
+
+<!-- JavaScript -->
+<script src="js/main.js"></script>
+
 </html>
